--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vite-project",
   "private": true,
   "version": "0.0.0",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
     "start": "nodemon src/server/server.js",
     "dev": "vite",
@@ -11,6 +11,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tanstack/react-query": "^5.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "node": "^21.1.0",
