--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.16",
     "@mui/styled-engine-sc": "^6.0.0-alpha.4",
+    "@mui/x-data-grid": "^6.17.0",
+    "@mui/x-data-grid-generator": "^6.17.0",
     "@tanstack/react-query": "^5.4.3",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
@@ -25,6 +27,7 @@
     "react-confirm-alert": "^3.0.6",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-router-dom": "^6.18.0",
     "sass": "^1.69.5",
     "styled-components": "^6.1.0"
   },
